# generative-stat-models

./: README.md  copulas.ipynb  gmm.ipynb  hmm.ipynb  pyproject.toml  sdv_tabular.ipynb  var.ipynb
