[tool.poetry]
name = "generative-stat-models"
version = "0.1.0"
description = ""
authors = ["James Bristow <james.bristow@plantandfood.co.nz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pgmpy = "^1.0.0"
pomegranate = "^1.1.2"
sdv = "^1.25.0"
ipython = "^8.28.0"
ipywidgets = "^8.1.5"
jupyter-core = "^5.7.2"
jupyterlab = "^4.3.1"
copulas = "^0.12.3"
scikit-learn = "^1.7.1"
matplotlib = "^3.10.5"
arch = "^7.2.0"
pmdarima = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
